--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="box">
-        <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam, eos.</p>
-        <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti impedit inventore accusamus modi nesciunt? Commodi quis autem eius consequatur minima.</p>
-    </div>
+  <div class="boxes">
+    <div class="box box-one"></div>
+    <div class="box box-two"></div>
+    <div class="box box-three"></div>
+    <div class="box box-four"></div>
+    <div class="box box-five"></div>
+  </div>
 </body>
 </html>
