--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="boxes">
-    <div class="box box-one"></div>
-    <div class="box box-two"></div>
-    <div class="box box-three"></div>
-    <div class="box box-four"></div>
-    <div class="box box-five"></div>
+  <div class="container">
+    <div class="box">BOX 1</div>
+    <div class="box">BOX 2</div>
+    <div class="box">BOX 3</div>
+    <div class="box">BOX 4</div>
   </div>
 </body>
+</html>
